--- a/front/src/lib/styles/components/Code/Code.css
+++ b/front/src/lib/styles/components/Code/Code.css
@@ -58,8 +58,7 @@
       }
     }
   }
-  &.copying,
-  &.copying::before {
+  &.copying {
     transform: scale(101%);
   }
   .title,
@@ -108,13 +107,15 @@
   }
   > pre {
     position: relative;
+    top: 1px;
     z-index: 7;
     transition-duration: var(--transition-duration);
     transition-property: scrollbar-color;
     transition-timing-function: var(--transition-timing-function);
     margin-bottom: -0.5rem;
     padding: 4.25rem 0 0.5rem 0;
-    overflow-x: scroll;
+    max-height: 33rem;
+    overflow: auto;
     scrollbar-color: transparent transparent;
     scrollbar-gutter: stable both-edges;
     scrollbar-width: thin;
