--- a/front/src/lib/styles/pages/post.css
+++ b/front/src/lib/styles/pages/post.css
@@ -462,7 +462,7 @@
 @media screen and (min-width: 768px) {
   .post {
     margin-top: 3.5rem;
-    background: var(--content-bg-gradient);
+    background: var(--content-bg-gradient), var(--bg-clr);
     padding: 2.33rem;
   }
   .post-hero-wrap {
