--- a/front/src/lib/styles/pages/cv.css
+++ b/front/src/lib/styles/pages/cv.css
@@ -2,6 +2,10 @@
 
 .main .cv.meat {
   width: 100%;
+  h1.page-heading {
+    font-family: var(--font-psbl);
+    letter-spacing: -0.175rem;
+  }
   h1.page-heading,
   h1.collection-title,
   h1.skill-title {
