style(front): updates code font-size and specifies p > code hover affordance (#1089)
Closes: #1089

--- a/front/src/lib/styles/components/Code/Code.css
+++ b/front/src/lib/styles/components/Code/Code.css
@@ -21,6 +21,7 @@
   background-color: var(--bg-light-clr);
   padding: 0 1.5rem 0 1rem;
   width: 100%;
+  font-size: 1rem;
   &::before {
     position: absolute;
     top: 0;
