--- a/front/src/lib/styles/pages/post.css
+++ b/front/src/lib/styles/pages/post.css
@@ -187,7 +187,7 @@
   padding-left: 1rem;
   width: 100%;
   p:hover {
-    code {
+    > code {
       border: 1px dotted var(--highlight-clr);
     }
   }
@@ -413,7 +413,7 @@
     white-space: -o-pre-wrap;
     word-wrap: break-word;
   }
-  p code {
+  p > code {
     transition-duration: var(--transition-duration);
     transition-property: background-color, border;
     transition-timing-function: var(--transition-timing-function);
@@ -522,7 +522,7 @@
     height: 400px;
   }
   .post-article {
-    p code {
+    p > code {
       padding: 0.175rem 0.25rem;
     }
   }
