fix(front): fixes titleless popover padding

--- a/front/src/lib/styles/components/popover.css
+++ b/front/src/lib/styles/components/popover.css
@@ -39,6 +39,7 @@
     &.titleless {
       background-color: none;
       padding: 0;
+      padding-top: 1rem;
     }
     &_heading {
       width: min-content;
