--- a/front/src/lib/styles/pages/cv.css
+++ b/front/src/lib/styles/pages/cv.css
@@ -35,6 +35,7 @@
   & .summary {
     margin: 0 auto;
     padding: 0 1rem;
+    color: var(--fg-clr-o);
     p {
       padding: 0.5rem 0;
     }
@@ -75,6 +76,10 @@
         }
       }
     }
+  }
+  .print-links {
+    display: none;
+    visibility: hidden;
   }
 }
 
@@ -373,6 +378,10 @@
     }
   }
   .experience-timeline-date {
+    .print-date {
+      display: none;
+      visibility: hidden;
+    }
     @media screen and (min-width: 640px) {
       text-align: right;
     }
