--- a/front/src/lib/styles/pages/category.css
+++ b/front/src/lib/styles/pages/category.css
@@ -35,6 +35,7 @@
       margin: 0;
     }
     .post-item {
+      padding: 0 0 1rem 0;
       list-style-type: none;
       &:last-of-type {
         p {
@@ -71,13 +72,14 @@
         .post-title {
           margin-bottom: 0;
           font-size: 1.5rem;
-          line-height: 1.75rem;
+          line-height: 1.2;
           @media screen and (min-width: 480px) {
             font-size: 1.875rem;
             line-height: 2.25rem;
           }
         }
         .post-date {
+          padding: 0.5rem 0;
           font-size: 0.875rem;
           @media screen and (min-width: 480px) {
             font-size: 1rem;
@@ -204,7 +206,7 @@
 
 @media screen and (min-width: 480px) {
   .transition-elastic-fly-container ul {
-    padding: 1.5rem;
+    padding: 2rem;
   }
   .category .category-posts-list .post-item .category-tag a {
     margin-bottom: 0.33rem;
@@ -224,7 +226,7 @@
     padding: 0 2.33rem 5rem 2rem;
   }
   .transition-elastic-fly-container ul {
-    padding: 2rem;
+    padding: 3rem;
   }
   .category .aside {
     display: block;
